Oops, where did that come from

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 main: com.forgenz.horsess.Horses
-name: Horses2
+name: Horses
 version: 0.3.0
 author: ShadowDog007
 website: 'http://dev.bukkit.org/bukkit-plugins/horse-stables/'
