--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>Horses</groupId>
   <artifactId>Horses</artifactId>
-  <version>1.1.6</version>
+  <version>1.1.7</version>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <testSourceDirectory>src/test/java</testSourceDirectory>
@@ -55,7 +55,7 @@
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
-  		<version>1.6.2-R0.1-SNAPSHOT</version>
+  		<version>1.7.2-R0.2</version>
   	</dependency>
   	<dependency>
   		<groupId>net.milkbowl.vault</groupId>
@@ -85,7 +85,7 @@
   	<dependency>
   		<groupId>fr.neatmonster</groupId>
   		<artifactId>NoCheatPlus</artifactId>
-  		<version>B569</version>
+  		<version>B651</version>
   		<scope>system</scope>
   		<systemPath>${project.basedir}/lib/integration/NoCheatPlus.jar</systemPath>
   	</dependency>
