--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
       </testResource>
     </testResources>
     <plugins>
+
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
@@ -27,6 +28,30 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.2</version>
+        <executions>
+          <execution>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>replace</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <file>target/classes/plugin.yml</file>
+            <replacements>
+              <replacement>
+                <token>__PROJECT_VERSION__</token>
+                <value>${project.version}</value>
+              </replacement>
+            </replacements>
+          </configuration>
+       </plugin>
+
     </plugins>
   </build>
   <repositories>
