--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 main: com.forgenz.horses.Horses
 name: Horses
-version: 1.1.9
+version: __PROJECT_VERSION__
 author: ShadowDog007
 website: 'http://dev.bukkit.org/bukkit-plugins/horse-stables/'
 softdepend: [Vault, NoCheatPlus]
