--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>Horses</groupId>
   <artifactId>Horses</artifactId>
-  <version>1.1.9</version>
+  <version>1.1.10</version>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <testSourceDirectory>src/test/java</testSourceDirectory>
@@ -80,7 +80,7 @@
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
-  		<version>1.7.5-R0.1-SNAPSHOT</version>
+  		<version>LATEST</version>
   	</dependency>
   	<dependency>
   		<groupId>net.milkbowl.vault</groupId>
