--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,11 @@ defaultTasks 'clean', 'build', 'shadowJar', 'test', 'uploadArchives', 'jacocoTes
 // #########################
 group = group_
 if (project.hasProperty('teamcity')) {
-    version = version_ + '-' + teamcity['build.number']
+
+    if (teamcity['RELEASE'] != 'true') {
+        version = version_ + '-' + teamcity['build.number']
+    }
+    
     println "##teamcity[buildNumber '${version}']"
 } else {
     version = version_ + '-SNAPSHOT'
