--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ defaultTasks 'clean', 'build', 'shadowJar', 'test', 'uploadArchives', 'jacocoTes
 // #########################
 group = group_
 if (project.hasProperty('teamcity')) {
-    println teamcity
+    
     if (teamcity['RELEASE'] != 'true') {
         version = version_ + '-' + teamcity['build.number']
+    } else {
+        version = version_
     }
     
     println "##teamcity[buildNumber '${version}']"
