--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,10 @@ repositories {
     maven {
         url "http://maven.sk89q.com/repo/"
     }
+    // md-5 repo
+    maven {
+        url "http://repo.md-5.net/content/repositories/releases/"
+    }
 }
 
 dependencies {
@@ -133,7 +137,7 @@ dependencies {
     compile group: 'com.sk89q', name: 'worldedit', version: '5.6.2'
     compile group: 'com.sk89q', name: 'worldguard', version: '5.9'
     
-    compile files('lib/integration/NoCheatPlus.jar')
+    compile 'fr.neatmonster:ncpcore:static'
     
     compile group: 'org.projectlombok', name: 'lombok', version: '1.14.2'
     
