Updated gradlew version

--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,7 @@ test {
 // #### Gradle wrapper ####
 // ########################
 task wrapper(type: Wrapper) {
-    gradleVersion = 1.12
+    gradleVersion = '2.0'
 }
 
 // #######################
