--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     repositories {
-        jcenter()
+        jcenter {
+            url 'http://jcenter.bintray.com/'
+        }
     }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:0.8'
