--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ group = group_
 if (project.hasProperty('teamcity')) {
     
     if (teamcity['RELEASE'] != 'true') {
-        version = version_ + '-' + teamcity['build.number']
+        version = version_ + '#' + teamcity['build.number']
     } else {
         version = version_
     }
@@ -134,9 +134,9 @@ repositories {
 
 dependencies {
     compile group: 'org.bukkit', name: 'bukkit', version: '1.7.9-R0.2'
-    compile group: 'net.milkbowl.vault', name: 'Vault', version: '1.4.1'
+    compile group: 'net.milkbowl.vault', name: 'Vault', version: '1.4.2'
     
-    compile group: 'com.sk89q', name: 'worldedit', version: '5.6.2'
+    compile group: 'com.sk89q', name: 'worldedit', version: '5.6.3'
     compile group: 'com.sk89q', name: 'worldguard', version: '5.9'
     
     compile 'fr.neatmonster:ncpcore:static'
