--- a/build.gradle
+++ b/build.gradle
@@ -130,15 +130,19 @@ repositories {
     maven {
         url "http://repo.md-5.net/content/repositories/releases/"
     }
+    // spigot repo
+    maven {
+        url "https://hub.spigotmc.org/nexus/content/repositories/public/"
+    }
 }
 
 dependencies {
-    compile group: 'org.bukkit', name: 'bukkit', version: '1.7.9-R0.2'
+    compile group: 'org.bukkit', name: 'bukkit', version: '1.9-SNAPSHOT'
     compile group: 'net.milkbowl.vault', name: 'Vault', version: '1.4.2'
     
     compile group: 'com.sk89q', name: 'worldedit', version: '5.6.3'
     compile group: 'com.sk89q', name: 'worldguard', version: '5.9'
-    
+
     compile 'fr.neatmonster:ncpcore:static'
     
     compile group: 'org.projectlombok', name: 'lombok', version: '1.14.2'
