--- a/build.gradle
+++ b/build.gradle
@@ -137,7 +137,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.bukkit', name: 'bukkit', version: '1.9-SNAPSHOT'
+    compile group: 'org.bukkit', name: 'bukkit', version: '1.9-R0.1-SNAPSHOT'
     compile group: 'net.milkbowl.vault', name: 'Vault', version: '1.4.2'
     
     compile group: 'com.sk89q', name: 'worldedit', version: '5.6.3'
